--- a/src/app/fruitList/single-fruit/single-fruit.component.html
+++ b/src/app/fruitList/single-fruit/single-fruit.component.html
@@ -1,1 +1,39 @@
-1
+<section class="singleFruitBox">
+    <div>
+        <img src="./assets/img/fruits/{{fruit.img}}" alt="fruit img" srcset="">
+    </div>
+    <div>
+        <h2>{{fruit.name}}</h2>
+        <div>
+            <p><b>Bewertung:</b></p>
+            <div>
+                @for(count of [1, 2, 3, 4, 5]; track fruit) {
+                @if(fruit.stars >= count) {
+                <img src="./assets/img/stars/star.svg" alt="" srcset="">
+                } @else if(fruit.stars >= count - 0.5) {
+                <img src="./assets/img/stars/star-half.svg" alt="" srcset="">
+                } @else {
+                <img src="./assets/img/stars/star-empty.svg" alt="" srcset="">
+                }
+                }
+                <!-- <p [ngStyle]="{'background-color': fruit.stars > 3 ? fontColorGood : fontColorBad}">({{fruit.stars}})</p> -->
+                <!-- <p [ngClass]="{'fontColorBad': fruit.stars < 3, 'fontColorGood': fruit.stars >= 3}">({{fruit.stars}})</p> -->
+            </div>
+        </div>
+        <div><b>Art:</b><br>
+            <p>{{fruit.genus}}</p>
+        </div>
+        <div><b>Beschreibung:</b><br>{{fruit.description}}</div>
+        <div>
+            <div>
+                @for (review of fruit.reviews; track review) {
+                <div><b>{{review.name}}:</b><br>{{review.text}}</div>
+                } @empty {
+                <p>There are no comments.</p>
+                }
+            </div>
+            <div><input [(ngModel)]="inputData" type="text"><button><img (click)="sendInputData()" src="./assets/img/arrow-35-32.png" alt="" srcset=""></button>
+            </div>
+        </div>
+    </div>
+</section>
